fixed lights on firefox

--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -63,7 +63,7 @@ $module-text-base-height: 14rem;
       width: $base-button-width * $xxl-multiplier;
       margin-top: -( ($base-icon-size  * $xxl-multiplier) / 8);
       //right: $base-button-offset  * $xxl-multiplier;
-      right: 18rem;
+      right: 25rem;
     }
 
     li {
@@ -127,7 +127,7 @@ $module-text-base-height: 14rem;
 
       button {
         //left: $base-button-offset  * $xxl-multiplier;
-        left: 18rem;
+        left: 25rem;
       }
 
       .blue-line {
