--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -57,6 +57,7 @@ $base-h2-line-height: 2rem;
       margin-top: 1.5rem;
       margin-bottom: 2rem;
       width: 30vw;
+      max-width: 35rem;
     }
   }
 
